body overflow fix and margin bottom to top

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
 }
+body {
+  overflow-x: hidden;
+}
 .container {
   min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
